@@ -1,3 +1,7 @@
+Unreleased
+
+ - Bump ez_setup.py version.
+
 0.5 (2008-03-09)
 
  - Allow "remote user key" (default: REMOTE_USER) to be overridden
